# u-ite

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  final_test.py  internet_truth.py  pyproject.toml  requirements.txt  setup.py  test_full_history.py  test_install.sh
Documents/: .~lock.What_next.pdf#
archive/: commands.txt  network_state.json
automation/: observe.py  runner.py  service.py
core/: fingerprint.py  models.py  truth_engine.py
docs/: Truth_Table For "Brain_Storm".docx
scripts/: install-unix.sh  install-windows.ps1  install.sh
src/UNKNOWN.egg-info/: SOURCES.txt
src/u_ite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/uite/: __init__.py  __main__.py  home_data.csv
src/uite/api/visualization/: plots.py  queries.py
src/uite/cli/: __init__.py  __main__.py
src/uite/cli/commands/: compare.py  daemon.py  export.py  graph.py  history.py  network.py  service.py
src/uite/core/: __init__.py  device.py  fingerprint.py  formatters.py  models.py  network_profile.py  platform.py  truth_engine.py
src/uite/daemon/: orchestrator.py  runner.py
src/uite/diagnostics/: base.py
src/uite/exports/: Home_Router.json  Office_Network.json
src/uite/service/: __init__.py  darwin.py  install.py  linux.py  windows.py
src/uite/storage/: .db.py.swp  db.py  event_store.py  history.py  schema.sql  state_store.py
src/uite/tracking/: __init__.py  category.py  event_detector.py  event_factory.py  event_state.py  event_store.py  event_types.py  events.py  models.py  severity.py
src/uite/tracking/state/: __init__.py  emitter.py  engine.py  network_state.py  transitions.py
storage/: db.py  state_store.py
test_venv/: pyvenv.cfg
tests/unit/: test_fix.py
tracking/: category.py  event_detector.py  event_factory.py  event_state.py  event_types.py  history.py  network_info.py  severity.py  tracker.py
tracking/state/: __init__.py  emitter.py  engine.py
u_ite/: schema.sql  storage.py
visualization/: dashboard.py  queries.py
